--- a/styles/temples.css
+++ b/styles/temples.css
@@ -39,6 +39,9 @@ header a {
 #menu::before{
     content: "≡";
 }
+#menu.show::before{
+    content: "X";
+}
 
 header nav a:hover {
     background-color: #0B3948;
